# hashtest

./: CMakeLists.txt  LICENSE  README.md
algorithms/: CMakeLists.txt  algorithm.hh
algorithms/cityhash/: CMakeLists.txt  cityhash.cpp
algorithms/crc32/: CMakeLists.txt  crc32.cpp
algorithms/djb2/: CMakeLists.txt  djb2.cpp  djb2.hh
algorithms/djb2a/: CMakeLists.txt  djb2.cpp
algorithms/dummy/: CMakeLists.txt  dummy.cpp
algorithms/fnv/: CMakeLists.txt  fnv.cpp
algorithms/fnv1a/: CMakeLists.txt  fnv.cpp
algorithms/fnv64/: CMakeLists.txt  fnv.cpp
algorithms/jenkins-oat/: CMakeLists.txt  jenkins.cpp
algorithms/loselose/: CMakeLists.txt  loselose.cpp
algorithms/murmur2/: CMakeLists.txt  MurmurHash2.cpp  murmur2.cpp
algorithms/murmur3/: CMakeLists.txt  murmur3.cpp
algorithms/sdbm/: CMakeLists.txt  sdbm.cpp
algorithms/sha1/: CMakeLists.txt  sha1.cpp
algorithms/sha256/: CMakeLists.txt  sha256.cpp
algorithms/stdhash/: CMakeLists.txt  stdhash.cpp
algorithms/xxhash/: CMakeLists.txt  xxhash.cpp
algorithms/xxhash64/: CMakeLists.txt  xxhash.cpp
data/: datagen.py
src/: CMakeLists.txt  hashtest.cpp  suite.cpp  suite.hh  testloader.cpp  testloader.hh
