
add_subdirectory(dummy)
add_subdirectory(murmur3)
add_subdirectory(murmur2)
add_subdirectory(djb2)
add_subdirectory(djb2a)
add_subdirectory(sdbm)
add_subdirectory(loselose)
add_subdirectory(stdhash)
add_subdirectory(sha1)
add_subdirectory(sha256)
add_subdirectory(crc32)
add_subdirectory(xxhash)
add_subdirectory(xxhash64)
